--- a/CustomIdentity/Views/LeaveManagement/Create.cshtml
+++ b/CustomIdentity/Views/LeaveManagement/Create.cshtml
@@ -2,10 +2,6 @@
 @model LeaveDetailVM
 
 @{
-    var today = DateTime.Now.ToString("dd-MM-yyyy");
-}
-
-@{
     ViewData["Title"] = "Create Leave Request";
 }
 
@@ -24,12 +20,12 @@
     </div>
     <div class="form-group">
         <label asp-for="StartDate" class="control-label"></label>
-        <input asp-for="StartDate" class="form-control" type="date" min="@today" />
+        <input asp-for="StartDate" class="form-control" type="date" min="" />
         <span asp-validation-for="StartDate" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="EndDate" class="control-label"></label>
-        <input asp-for="EndDate" class="form-control" type="date" min="@today" />
+        <input asp-for="EndDate" class="form-control" type="date" min="" />
         <span asp-validation-for="EndDate" class="text-danger"></span>
     </div>
     <div class="form-group">
