--- a/CustomIdentity/Views/LeaveManagement/List.cshtml
+++ b/CustomIdentity/Views/LeaveManagement/List.cshtml
@@ -2,7 +2,7 @@
 
 <h1>User Leaves Taken</h1>
 
-<table class="table">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>Username</th>
@@ -20,4 +20,4 @@
     </tbody>
 </table>
 
-<a asp-action="Index" class="btn btn-primary">Go to Index</a>
+<a asp-action="Index" class="btn btn-primary">Back to Index</a>
