--- a/CustomIdentity/Views/LeaveManagement/Create.cshtml
+++ b/CustomIdentity/Views/LeaveManagement/Create.cshtml
@@ -29,8 +29,16 @@
         <span asp-validation-for="EndDate" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for="LeaveCategory" class="control-label"></label>
+        <select asp-for="LeaveCategory" class="form-control" id="leaveCategory">
+            <option value="Sick Leave">Sick Leave</option>
+            <option value="Casual Leave">Casual Leave</option>
+        </select>
+        <span asp-validation-for="LeaveCategory" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <label asp-for="LeaveType" class="control-label"></label>
-        <select asp-for="LeaveType" class="form-control" id="leaveType" onchange="toggleTimeFields()">
+        <select asp-for="LeaveType" class="form-control" id="leaveType" onchange= "toggleTimeFields()">
             <option value="Full Day">Full Day</option>
             <option value="Half Day">Half Day</option>
         </select>
@@ -46,14 +54,12 @@
         <input asp-for="EndTime" class="form-control" type="time" />
         <span asp-validation-for="EndTime" class="text-danger"></span>
     </div>
+    <br />
     <div class="form-group">
         <input type="submit" value="Submit" class="btn btn-primary" />
+        <a asp-action="Index" class="btn btn-primary">Back to Index</a>
     </div>
 </form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     <script>
