--- a/CustomIdentity/Views/Users/Edit.cshtml
+++ b/CustomIdentity/Views/Users/Edit.cshtml
@@ -40,7 +40,8 @@
         <input asp-for="Password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-    
+    <br />
     <button type="submit" class="btn btn-primary">Save</button>
+    <a asp-action="Index" class="btn btn-primary">Back</a>
 </form>
 
