--- a/CustomIdentity/Views/Users/Index.cshtml
+++ b/CustomIdentity/Views/Users/Index.cshtml
@@ -9,7 +9,8 @@
 
 
 
-<table class="table">
+<table class="table table-striped table-bordered">
+
     <thead>
         <tr>
             <th>Name</th>
