--- a/CustomIdentity/Views/Users/Edit.cshtml
+++ b/CustomIdentity/Views/Users/Edit.cshtml
@@ -34,11 +34,20 @@
         <input asp-for="Number" class="form-control" type="number" step="1" />
         <span asp-validation-for="Number" class="text-danger"></span>
     </div>
-
     <div class="form-group">
-        <label asp-for="Password" class="control-label"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
+        <label asp-for="CurrentPassword" class="control-label"></label>
+        <input asp-for="CurrentPassword" class="form-control" type="password" />
+        <span asp-validation-for="CurrentPassword" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="NewPassword" class="control-label"></label>
+        <input asp-for="NewPassword" class="form-control" type="password" />
+        <span asp-validation-for="NewPassword" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="ConfirmNewPassword" class="control-label"></label>
+        <input asp-for="ConfirmNewPassword" class="form-control" type="password" />
+        <span asp-validation-for="ConfirmNewPassword" class="text-danger"></span>
     </div>
     <br />
     <button type="submit" class="btn btn-primary">Save</button>
